# test-bracket-analyzer

./: Dockerfile  Makefile  README.md  mm_test.db  pyproject.toml  requirements.txt  setup.cfg
config/: base.yaml  providers.yaml  scoring.yaml
data/raw/: 2019_games.csv  2020_games.csv  2020_teams.csv
src/backtesting/: __init__.py  runner.py
src/cli/: __init__.py  main.py
src/data_acquisition/: __init__.py  etl.py  schema.py  scraper_ncaa.py  scraper_sportsref.py  scraper_torvik.py  scraper_wikipedia.py
src/data_cleaning/: __init__.py  join_features.py  leakage_guards.py  standardize.py
src/evaluation/: __init__.py  bracket_scoring.py  metrics.py  pool_simulator.py  reports.py
src/simulation/: bayes.py  calibration.py  elo.py  ensemble.py  features.py  logit.py  monte_carlo.py
src/utils/: __init__.py  caching.py  dates.py  geo.py  io.py  logging.py  naming.py  rng.py
src/visualization/: __init__.py  dashboard_streamlit.py
src/writeups/: __init__.py  generator.py
src/writeups/templates/: game_preview.j2
tests/: conftest.py  test_bracket_scoring.py  test_cli.py  test_features.py  test_leakage.py  test_metrics.py  test_scrapers.py
